# Studdeo-Backend

./: .env.example  .gga  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  ventas.txt  vercel.json
alembic/: env.py
alembic/versions/: 46df6427f746_inicializacion_de_la_base_de_datos.py  5961238f66fa_se_agrega_tabla_password_reset_token.py  b9912f3d82ff_inicializacion_de_la_base_de_datos.py
app/: main.py  test_odoo.py
app/configuration/: __init__.py  configuration.py
app/database/: __init__.py  database.py
app/database/models/: __init__.py  base.py  contract.py  course.py  detail_sale.py  lesson.py  password_reset_token.py  permission.py  role.py  role_x_permission.py  sale.py  student.py  student_x_course.py  user.py  user_x_contract.py
app/email/: __init__.py  client.py
app/email/templates/: restore_password.html
app/enums/: __init__.py  environment.py  permission.py  role.py  template_html.py
app/error/: __init__.py  auth_error.py  course_error.py  user_error.py
app/external_services/: __init__.py  email.py  odoo.py
app/external_services/odoo/: __init__.py  client.py
app/external_services/odoo/documentation/: base_de_datos.json  channel.json  (+5 more)
app/repositories/: __init__.py  contract_repository.py  course_repository.py  odoo_repository.py  password_reset_token_repository.py  role_repository.py  user_repository.py
app/routes/: __init__.py  administrator_http.py  auth_http.py  course_http.py  role_http.py  sale_http.py  teacher_http.py  user_http.py
app/routes/dependencies/: __init__.py  dependencies.py
app/schemas/: __init__.py  buyer.py  contract.py  course.py  email.py  lesson.py  odoo.py  role.py  sale.py  student.py  teacher.py  user.py
app/schemas/examples/: example.json  response_1763417852779.json
app/services/: __init__.py  auth_service.py  course_service.py  role_service.py  security_service.py  user_service.py
test/unit/: test_mail.py  test_odoo.py
