[project]
name = "metricas-studdeo-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.121.2",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "logfire[fastapi]>=4.15.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "black>=25.12.0",
    "fastapi[standard]>=0.121.2",
    "hypothesis>=6.148.7",
    "pre-commit>=4.5.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.1",
    "ruff>=0.14.11",
]
